--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </div>
       </section>
 
-      <section class="women section" id="women">
+      <!-- <section class="women section" id="women">
         <h2 class="section-title">WOMEN SNEAKERS</h2>
 
         <div class="women__container bd-grid">
@@ -212,7 +212,7 @@
             ></a>
           </article>
         </div>
-      </section>
+      </section> -->
 
       <section class="offer section">
         <div class="offer__container bd-grid">
